--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,6 +107,83 @@
 
         table {
             width: 100%;
+            border-collapse: collapse;
+            margin-top: 1rem;
+        }
+
+        th,
+        td {
+            padding: 10px;
+            border-bottom: 1px solid #eee;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f8f9fa;
+        }
+
+        .alert {
+            padding: 10px;
+            background-color: #d4edda;
+            color: #155724;
+            border-radius: 4px;
+            margin-bottom: 1rem;
+            display: none;
+        }
+
+        .alert.error {
+            background-color: #f8d7da;
+            color: #721c24;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="container">
+        <h1>Cloud File Manager</h1>
+        <div id="alertBox" class="alert"></div>
+
+        <!-- Navigation -->
+        <div class="nav" id="authNav">
+            <a onclick="showSection('login')">Login</a>
+            <a onclick="showSection('register')">Register</a>
+        </div>
+        <div class="nav" id="userNav" style="display:none;">
+            <span id="welcomeMsg">Welcome</span>
+            <a onclick="logout()">Logout</a>
+        </div>
+
+        <!-- Registration Section -->
+        <div id="register" class="section">
+            <h2>Register</h2>
+            <div class="form-group">
+                <label>Username</label>
+                <input type="text" id="regUsername">
+            </div>
+            <div class="form-group">
+                <label>Email</label>
+                <input type="email" id="regEmail">
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" id="regPassword">
+            </div>
+            <button onclick="register()">Register</button>
+            <button class="secondary" onclick="showSection('login')">Back to Login</button>
+        </div>
+
+        <!-- Login Section -->
+        <div id="login" class="section active">
+            <h2>Login</h2>
+            <div class="form-group">
+                <label>Username</label>
+                <input type="text" id="loginUsername">
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input type="password" id="loginPassword">
+            </div>
 
 </script>
 </body>
