--- a/frontend/index.html
+++ b/frontend/index.html
@@ -184,7 +184,114 @@
                 <label>Password</label>
                 <input type="password" id="loginPassword">
             </div>
+            <button onclick="login()">Login</button>
+            <button class="secondary" onclick="showSection('register')">Create Account</button>
+        </div>
 
-</script>
-</body>
-</html>
+        <!-- Dashboard Section -->
+        <div id="dashboard" class="section">
+            <h2>My Files</h2>
+
+            <div class="form-group" style="border: 1px dashed #ccc; padding: 20px; text-align: center;">
+                <input type="file" id="fileInput" style="margin-bottom: 10px;">
+                <button onclick="uploadFile()">Upload File</button>
+            </div>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Filename</th>
+                        <th>Size</th>
+                        <th>Date</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="fileList">
+                    <!-- Files will be loaded here -->
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <script>
+        const API_URL = 'http://cloudfinal-us-alb-1031552364.us-east-1.elb.amazonaws.com';
+
+        function showSection(id) {
+            document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+            document.getElementById(id).classList.add('active');
+
+            // Toggle Nav
+            const token = localStorage.getItem('token');
+            if (token) {
+                document.getElementById('authNav').style.display = 'none';
+                document.getElementById('userNav').style.display = 'block';
+            } else {
+                document.getElementById('authNav').style.display = 'block';
+                document.getElementById('userNav').style.display = 'none';
+            }
+        }
+
+        function showAlert(msg, isError = false) {
+            const el = document.getElementById('alertBox');
+            el.textContent = msg;
+            el.className = 'alert ' + (isError ? 'error' : '');
+            el.style.display = 'block';
+            setTimeout(() => el.style.display = 'none', 3000);
+        }
+
+        async function register() {
+            const username = document.getElementById('regUsername').value;
+            const email = document.getElementById('regEmail').value;
+            const password = document.getElementById('regPassword').value;
+
+            try {
+                const res = await fetch(`${API_URL}/api/register`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ username, email, password })
+                });
+                const data = await res.json();
+                if (res.ok) {
+                    showAlert('Registration successful! Please login.');
+                    showSection('login');
+                } else {
+                    showAlert(data.message || 'Registration failed', true);
+                }
+            } catch (e) {
+                showAlert('Error connecting to server', true);
+            }
+        }
+
+        async function login() {
+            const username = document.getElementById('loginUsername').value;
+            const password = document.getElementById('loginPassword').value;
+
+            try {
+                const res = await fetch(`${API_URL}/api/login`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ username, password })
+                });
+                const data = await res.json();
+                if (res.ok) {
+                    localStorage.setItem('token', data.token);
+                    localStorage.setItem('username', data.username);
+                    document.getElementById('welcomeMsg').textContent = `Welcome, ${data.username}`;
+                    showSection('dashboard');
+                    loadFiles();
+                } else {
+                    showAlert(data.message || 'Login failed', true);
+                }
+            } catch (e) {
+                showAlert('Error connecting to server', true);
+            }
+        }
+
+        function logout() {
+            localStorage.removeItem('token');
+            localStorage.removeItem('username');
+            showSection('login');
+        }
+
+        async function loadFiles() {
+            const token = localStorage.getItem('token');
