--- a/vp-terminal.html
+++ b/vp-terminal.html
@@ -113,7 +113,7 @@
         <div id="body">
 
             <!-- Icon Rail (built by app.js - Fallback injected) -->
-            <div id="rail">
+            <div id="rail" style="z-index: 2000; position: fixed;">
                 <div class="rail-item active" data-cat="core">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                         <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
@@ -124,7 +124,7 @@
             </div>
 
             <!-- Nav Panel (built by app.js - Fallback injected) -->
-            <div id="nav-panel">
+            <div id="nav-panel" style="z-index: 1000; position: fixed;">
                 <div class="nav-cat-hd">
                     <div class="nav-cat-name">Core</div>
                     <div class="nav-cat-desc">Dashboard, alerts & live market overview</div>
