Fix: Added physical #right-gap-pillar to html and pulled #app and .stMain viewport back by 3rem to force a guaranteed gap on ultra-wide monitors. Bumped version to v2.5 per user request

--- a/vp-terminal.html
+++ b/vp-terminal.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <!-- INVISIBLE RIGHT MARGIN PILLAR (Forces right gap even if elements try to stretch) -->
+    <div id="right-gap-pillar"></div>
 
     <div id="app">
 
@@ -20,7 +22,7 @@
             <!-- Logo -->
             <div class="tb-logo">
                 <div class="logo-mark">VP</div>
-                <span class="logo-text">Terminal<span class="logo-ver">v2.4</span></span>
+                <span class="logo-text">Terminal<span class="logo-ver">v2.5</span></span>
             </div>
 
             <!-- Controls -->
